--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ body {
   max-width: 95vw;
   box-shadow: 0px 50px 45px -15px rgba(18, 21, 52, 0.18);
   border-radius: 25px;
+  margin: 4rem;
 }
 .content__heading {
   display: flex;
@@ -158,7 +159,7 @@ margin-right: .3rem;
     color: #fff;
     background: linear-gradient(0deg, #292B48, #292B48);
     border-radius: 5px;
-    padding: 20px 40px;
+    padding: 15px 30px;
     margin-right: 1.5rem;
     font-weight: 400;
     transition: all 0.2s;
